feat: Solve Errors